[project]
name = "prompt_tester"
version = "0.1.0"
description = "Small web app for testing prompts with different models"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "openai>=1.99.9",
    "fastapi[standard]>=0.116.1",
    "supabase>=2.19.0",
    "pyjwt>=2.8.0",
    "requests>=2.31.0"
]
